branches/wip/Archive/71b6b439065cbb52a47d72fee80e9f6d-0f11904895a20602a6e5ca9f4b5b0039/output
+ g++ -std=c++1y -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:8:18: error: use of ‘auto foo()’ before deduction of ‘auto’
     std::cout << foo();
                  ^
